--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,18 +1,54 @@
 <ion-header>
   <ion-navbar>
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
-    <ion-title>Home</ion-title>
+    <ion-title style="text-align:center">
+       <img width="50" height="50" src="../assets/imgs/Teras_Herbal_Juice_Logo.png">
+    </ion-title>
   </ion-navbar>
-</ion-header>
+</ion-header> 
 
 <ion-content padding>
-  <h3>Ionic Menu Starter</h3>
+<ion-grid>
+  <ion-row>
+    <ion-col>
+      <ion-item>
+      <ion-label floating>Name</ion-label>
+      <ion-input type="text"></ion-input>
+    </ion-item>
+    </ion-col>
+    <ion-col>
+      <ion-item>
+      <ion-label floating>Surname</ion-label>
+      <ion-input type="text"></ion-input>
+      </ion-item>
+    </ion-col>
+  </ion-row>
+  <ion-row>
+    <ion-col>
+      <ion-item>
+      <ion-label floating>Cell Phone</ion-label>
+      <ion-input type="text"></ion-input>
+    </ion-item>
+    </ion-col>
+    <ion-col>
+      <ion-item>
+      <ion-label floating>Email</ion-label>
+      <ion-input type="text"></ion-input>
+      </ion-item>
+    </ion-col>
+  </ion-row>
+</ion-grid>
+<ion-list>
+    <ion-item>
+      <ion-label floating>Password</ion-label>
+      <ion-input type="text"></ion-input>
+    </ion-item>
 
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
-  </p>
+    <ion-item>
+      <ion-label floating>Confirm Password</ion-label>
+      <ion-input type="password"></ion-input>
+    </ion-item>
+</ion-list>
 
-  <button ion-button secondary menuToggle>Toggle Menu</button>
+  <button ion-button full>Sign Up</button>
+  <p style="text-align: center">&#169;Copyright. All rights reserved</p>
 </ion-content>
