log in and sign up

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,54 +1,18 @@
 <ion-header>
   <ion-navbar>
-    <ion-title style="text-align:center">
-       <img width="50" height="50" src="../assets/imgs/Teras_Herbal_Juice_Logo.png">
-    </ion-title>
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+    <ion-title>Home</ion-title>
   </ion-navbar>
-</ion-header> 
+</ion-header>
 
 <ion-content padding>
-<ion-grid>
-  <ion-row>
-    <ion-col>
-      <ion-item>
-      <ion-label floating>Name</ion-label>
-      <ion-input type="text"></ion-input>
-    </ion-item>
-    </ion-col>
-    <ion-col>
-      <ion-item>
-      <ion-label floating>Surname</ion-label>
-      <ion-input type="text"></ion-input>
-      </ion-item>
-    </ion-col>
-  </ion-row>
-  <ion-row>
-    <ion-col>
-      <ion-item>
-      <ion-label floating>Cell Phone</ion-label>
-      <ion-input type="text"></ion-input>
-    </ion-item>
-    </ion-col>
-    <ion-col>
-      <ion-item>
-      <ion-label floating>Email</ion-label>
-      <ion-input type="text"></ion-input>
-      </ion-item>
-    </ion-col>
-  </ion-row>
-</ion-grid>
-<ion-list>
-    <ion-item>
-      <ion-label floating>Password</ion-label>
-      <ion-input type="text"></ion-input>
-    </ion-item>
+  <h3>Ionic Menu Starter</h3>
 
-    <ion-item>
-      <ion-label floating>Confirm Password</ion-label>
-      <ion-input type="password"></ion-input>
-    </ion-item>
-</ion-list>
+  <p>
+    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
+  </p>
 
-  <button ion-button full>Sign Up</button>
-  <p style="text-align: center">&#169;Copyright. All rights reserved</p>
+  <button ion-button secondary menuToggle>Toggle Menu</button>
 </ion-content>
