Uploading proof of payment

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -3,16 +3,70 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Home</ion-title>
+      <ion-title style="margin-left:5px">
+        <img width="50" height="50" src="../assets/imgs/Teras_Herbal_Juice_Logo.png">
+      </ion-title>
   </ion-navbar>
 </ion-header>
-
-<ion-content padding>
-  <h3>Ionic Menu Starter</h3>
-
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
-  </p>
-
-  <button ion-button secondary menuToggle>Toggle Menu</button>
+<ion-content style="background-color: #edeaea" padding-right>
+    <ion-grid>
+        <ion-row>
+            <ion-col s6>
+                <ion-card style="border-radius:5px;width:100%;height:100px">
+                    <ion-card-header>
+                        
+                    </ion-card-header>
+                    <ion-card-content>
+                        <ion-icon name="star" color="yellow" style="color:yellow"></ion-icon>
+                        1000 points <br> 
+                        <div style="text-align: center">
+                            <button ion-button color="secondary" style="font-size: 5pt" round>view</button>
+                        </div>
+                    </ion-card-content>
+                </ion-card>
+            </ion-col>
+            <ion-col s6>
+                <ion-card style="border-radius:5px;width:100%;height:100px">
+                    <ion-card-header>
+                        
+                    </ion-card-header>
+                    <ion-card-content>
+                        <ion-icon name="basket" color="primary"></ion-icon>
+                        2000 orders <br> 
+                        <div style="text-align: center">
+                            <button ion-button color="secondary" style="font-size: 5pt" round>view</button>
+                        </div> 
+                    </ion-card-content>
+                </ion-card>
+            </ion-col>
+        </ion-row>
+        <ion-row>
+            <ion-col s12>
+                <ion-card class=" cards-bg" style="border-radius:5px;width:100%;height:100%">
+                    <ion-card-header>
+                        <div>
+                            <ion-grid>
+                                <ion-row>
+                                    <ion-col s6>
+                                        <ion-icon name="people" color="primary"></ion-icon>
+                                        My people
+                                    </ion-col>
+                                    <ion-col s6>
+                                        <button ion-button color="secondary" style="font-size: 5pt;margin-top:-10px;width:100%" round>view</button>
+                                    </ion-col>
+                                </ion-row>
+                            </ion-grid>
+                        </div>
+                    </ion-card-header>
+                    <ion-card-content>
+                        <ion-item-group>
+                            <ion-item-divider>Themba Mthokozisi Mbhele</ion-item-divider>
+                            <ion-item-divider>Gontse Mamabolo</ion-item-divider>
+                            <ion-item-divider>Boitumelo Matlala</ion-item-divider>
+                        </ion-item-group>
+                    </ion-card-content>
+                </ion-card>
+            </ion-col>
+        </ion-row>
+    </ion-grid>
 </ion-content>
