--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -56,9 +56,15 @@
                     </div>
                 </ion-item>
                 <ion-item>
+                  <ion-label>Referred By</ion-label>
+                    <ion-select [(ngModel)]="account.referredBy" [ngModelOptions]="{standalone: true}" >
+                        <ion-option *ngFor="let people of peoples" [value]="people.IDNumber">{{people.name}}</ion-option>
+                    </ion-select>
+                </ion-item>
+                <!--<ion-item>
                     <ion-label floating>Referred By</ion-label>
                     <ion-input [(ngModel)]="account.referredBy" formControlName="referredBy" [class.invalid]="!signUpSecondForm.controls.referredBy.valid && (signUpSecondForm.controls.referredBy.dirty || secondSubmitAttempt)" type="text"></ion-input>
-                </ion-item>
+                </ion-item>-->
                 <ion-item>
                     <ion-label floating>Address</ion-label>
                     <ion-input [(ngModel)]="account.address" formControlName="address" [class.invalid]="!signUpSecondForm.controls.address.valid && (signUpSecondForm.controls.address.dirty || secondSubmitAttempt)" type="text"></ion-input>
