--- a/src/pages/upload/upload.html
+++ b/src/pages/upload/upload.html
@@ -27,7 +27,7 @@
           <button ion-button color="secondary" style="width:100%" round (click)="listDirectories()">browse</button>
         </ion-card-content>
     </ion-card>
-    <ion-card *ngIf="!showUploadButton">
+    <ion-card *ngIf="showUploadButton">
         <ion-card-header style="font-family: 'Noto Sans', sans-serif">
             <ion-icon name="folder" style="color:#14bf14"></ion-icon>&nbsp;Documents
         </ion-card-header>
