--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -6,8 +6,8 @@
   </ion-navbar>
 
 </ion-header>
-<ion-content padding text-center class="login-background">
-  <ion-card class="login-card">
+<ion-content padding style="background-color: #edeaea">
+  <ion-card>
     <form [formGroup]="loginForm">
       <ion-list padding>
         <ion-item>
