--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,9 @@
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  
+  <script src="https://js.stripe.com/v3/" async></script>
+  <script type="text/javascript" src="https://www.2checkout.com/checkout/api/2co.min.js"></script>
 
   <!-- cordova.js required for cordova apps (remove if not needed) -->
   <script src="cordova.js"></script>
