upload and icons

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,12 +1,12 @@
 
 
-<ion-header>
+<ion-header style="background-color: #FFFFFF !important;">
   <ion-navbar>
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
       <ion-title style="margin-left:5px">
-        <img width="50" height="50" src="../assets/imgs/Teras_Herbal_Juice_Logo.png">
+        <img width="50" height="50" src="assets/imgs/Teras_Herbal_Juice_Logo.png">
       </ion-title>
   </ion-navbar>
 </ion-header>
