--- a/src/pages/order/order.html
+++ b/src/pages/order/order.html
@@ -15,7 +15,7 @@
 
 <ion-content style="background-color: #edeaea" padding>
     <ion-card>
-      <img height="200" src="../../assets/imgs/IMG_teras_d1450.jpg"/>
+      <img height="200" src="assets/imgs/IMG_teras_d1450.jpg"/>
       <ion-card-content>
         <ion-card-title>
           Teras Herbal Juice
