--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar hideBackButton="true">
     <ion-title style="text-align:center">
-      <img width="50" height="50" src="../assets/imgs/Teras_Herbal_Juice_Logo.png">
+      <img width="50" height="50" src="assets/imgs/Teras_Herbal_Juice_Logo.png">
     </ion-title>
   </ion-navbar>
 
