--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,7 +5,7 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-      <ion-title style="margin-left:5px">
+      <ion-title  style="margin-left: 30%;">
         <img width="50" height="50" src="assets/imgs/Teras_Herbal_Juice_Logo.png">
       </ion-title>
   </ion-navbar>
