--- a/src/pages/order/order.html
+++ b/src/pages/order/order.html
@@ -14,7 +14,7 @@
 
 
 <ion-content style="background-color: #edeaea" padding>
-    <ion-card>
+    <ion-card style="border-radius: 15px">
       <img height="200" src="assets/imgs/IMG_teras_d1450.jpg"/>
       <ion-card-content>
         <ion-card-title>
@@ -30,7 +30,7 @@
         </div>
       </ion-card-content>
     </ion-card>
-    <ion-card>
+    <ion-card style="border-radius: 15px">
       <ion-card-content>
         <ion-card-title>
           Order History
