--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -5,13 +5,10 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-
   <ion-navbar>
-    <ion-title><h2>Profile</h2></ion-title>
+    <ion-title>Profile</ion-title>
   </ion-navbar>
-
 </ion-header>
-
 
 <ion-content style="background-color: #edeaea" padding>
     <ion-card style="border-radius: 15px">
@@ -33,37 +30,37 @@
                     </ion-item>
                     <ion-item>
                         <ion-label floating><b>Surname</b></ion-label>
-                        <ion-input type="text" value="{{user.surname}}"></ion-input>
+                        <ion-input [(ngModel)]="user.surname" type="text" value="{{user.surname}}"></ion-input>
                     </ion-item>
                      <ion-item>
                         <ion-label floating><b>Cellphone</b></ion-label>
-                        <ion-input type="text" value="{{user.cellPhone}}"></ion-input>
+                        <ion-input [(ngModel)]="user.cellPhone" type="text" value="{{user.cellPhone}}"></ion-input>
                     </ion-item>
                      <ion-item>
                         <ion-label floating><b>Email Address</b></ion-label>
-                        <ion-input type="text" value="{{user.email}}"></ion-input>
+                        <ion-input [(ngModel)]="user.email" type="text" value="{{user.email}}"></ion-input>
                     </ion-item>
                     <ion-item>
-                        <ion-label floating><b>ID Number</b></ion-label>
-                        <ion-input type="text" value="{{user.IDNumber}}"></ion-input>
+                        <ion-label floating><b>ID Number/ Passport</b></ion-label>
+                        <ion-input [(ngModel)]="user.IDNumber" type="text" value="{{user.IDNumber}}"></ion-input>
                     </ion-item>
                     <ion-item>
                         <button (click)="pickFile()" class="summitbutton" ion-button full style="margin: 0px">Upload ID / Passport Image</button>
                     </ion-item>
                     <ion-item>
                         <ion-label floating><b>Bank Name</b></ion-label>
-                        <ion-input type="text" value="{{user.bankName}}"></ion-input>
+                        <ion-input [(ngModel)]="user.bankName" type="text" value="{{user.bankName}}"></ion-input>
                     </ion-item>
                     <ion-item>
                         <ion-label floating><b>Account Number</b></ion-label>
-                        <ion-input type="text" value="{{user.accountNumber}}"></ion-input>
+                        <ion-input [(ngModel)]="user.accountNumber" type="text" value="{{user.accountNumber}}"></ion-input>
                     </ion-item>
                     <ion-item>
                         <ion-label floating><b>Address</b></ion-label>
-                        <ion-input type="text" value="{{user.address}}"></ion-input>
+                        <ion-input [(ngModel)]="user.address" type="text" value="{{user.address}}"></ion-input>
                     </ion-item>
                     <ion-item class="center" no-lines justify-content-center align-items-center>
-                        <button (click)="updateUser()" ion-button color="secondary" style="width:90%" round class="summitbutton">Save Profile</button>
+                        <button (click)="updateUser(true)" ion-button color="secondary" style="width:90%" round class="summitbutton">Save Profile</button>
                     </ion-item>
                 </ion-list>                
             
